feat: include raw zod errors in response (#691)
