# packages/plugins/openapi/tests/baseline/rest.baseline.yaml
@@ -1395,6 +1395,14 @@ components:
                     detail:
                         type: string
                         description: Error detail
+                    reason:
+                        type: string
+                        description: Detailed error reason
+                    zodErrors:
+                        type: object
+                        additionalProperties: true
+                        description: Zod validation errors if the error is due to data validation
+                            failure
         _errorResponse:
             type: object
             required:
